--- a/src/sass/partials/_inputs.scss
+++ b/src/sass/partials/_inputs.scss
@@ -204,6 +204,7 @@ input[type="password"] {
 }
 
 .slider-input {
+    margin-bottom: 10px;
     > .label {
         display: flex;
         justify-content: space-between;
